--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = pass
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/
+
+quarkus.http.filter.csp-header.header."Content-Security-Policy"=default-src 'self'; script-src 'self'; object-src 'none'; base-uri 'none'
+quarkus.http.filter.csp-header.matches=/.*
