✨ Moved token expiry into application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/
 
 quarkus.http.filter.csp-header.header."Content-Security-Policy"=default-src 'self'; script-src 'self'; object-src 'none'; base-uri 'none'
 quarkus.http.filter.csp-header.matches=/.*
+
+# 15 min
+jwt.access-token-expiry=900
+# 7 days
+jwt.refresh-token-expiry=604800
